<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name='app_name'>
        Ruboto - MasterMind
    </string>
    <string name='header_text'>
        Enter four numbers below and submit your guess
    </string>
    <string name="congrats">Congrats, you solved the puzzle</string>
    <string name="title_max_attempts">Difficulty Level</string>
    <string name="summary_max_attempts">This will determine how many attempts at guessing the correct number will be allowed.</string>
    <string name="label_max_attempts">Select Difficulty Level</string>
    <string name="max_attempts_exceeded">You\'ve exceeded your max number of attempts.</string>

    <string name="menu_label_prefs">Preferences</string>
    <string name="title_demo_mode">Demo Mode</string>
    <string name="summary_demo_mode">This should only be used for testing.</string>
    <string name="label_demo_mode">Set Demo Mode</string>

</resources>