<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
  <ListPreference
      android:key="max_attempts"
      android:title="@string/title_max_attempts"
      android:summary="@string/summary_max_attempts"
      android:entries="@array/entries_max_attempts"
      android:entryValues="@array/entryvalues_max_attempts"
      android:defaultValue="20"
      android:dialogTitle="@string/label_max_attempts" />
  <ListPreference
      android:key="demo_mode"
      android:title="@string/title_demo_mode"
      android:summary="@string/summary_demo_mode"
      android:entries="@array/entries_demo_mode"
      android:entryValues="@array/entryvalues_demo_mode"
      android:defaultValue="false"
      android:dialogTitle="@string/label_demo_mode" />
</PreferenceScreen>